--- a/SLG/Assembly-CSharp.csproj
+++ b/SLG/Assembly-CSharp.csproj
@@ -62,12 +62,18 @@
   <ItemGroup>
     <Compile Include="Assets\Chess.cs" />
     <Compile Include="Assets\gameManager.cs" />
+    <Compile Include="Assets\HexCell.cs" />
+    <Compile Include="Assets\HexCoordinates.cs" />
+    <Compile Include="Assets\HexGrid.cs" />
+    <Compile Include="Assets\HexMesh.cs" />
+    <Compile Include="Assets\HexMetrics.cs" />
     <Compile Include="Assets\mapManager.cs" />
     <Compile Include="Assets\selectedMark.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\Shaders\VertexColors.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
