--- a/SLG/Assembly-CSharp.csproj
+++ b/SLG/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\HexCell.cs" />
     <Compile Include="Assets\HexCoordinates.cs" />
     <Compile Include="Assets\HexGrid.cs" />
+    <Compile Include="Assets\HexMapEditor.cs" />
     <Compile Include="Assets\HexMesh.cs" />
     <Compile Include="Assets\HexMetrics.cs" />
     <Compile Include="Assets\mapManager.cs" />
