--- a/SLG/Assembly-CSharp.csproj
+++ b/SLG/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\gameManager.cs" />
     <Compile Include="Assets\HexCell.cs" />
     <Compile Include="Assets\HexCoordinates.cs" />
+    <Compile Include="Assets\HexDirection.cs" />
     <Compile Include="Assets\HexGrid.cs" />
     <Compile Include="Assets\HexMapEditor.cs" />
     <Compile Include="Assets\HexMesh.cs" />
