SLG_Demo_Version_0.0.4
1. Auto load enemy
2. Chess now can attack

--- a/SLG/Assembly-CSharp.csproj
+++ b/SLG/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\EnemyActor.cs" />
     <Compile Include="Assets\Scripts\ActorIDGenerator.cs" />
     <Compile Include="Assets\Scripts\ActorManager.cs" />
     <Compile Include="Assets\Scripts\Chess.cs" />
