SLG_Demo_Version_0.0.51
1. Now it can save and load map
2. It can generate map files (more than 1)
3. Users can select the map they want to load

--- a/SLG/Assembly-CSharp.csproj
+++ b/SLG/Assembly-CSharp.csproj
@@ -61,6 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\EnemyActor.cs" />
+    <Compile Include="Assets\NewMapMenu.cs" />
+    <Compile Include="Assets\SaveLoadItem.cs" />
+    <Compile Include="Assets\SaveLoadMenu.cs" />
     <Compile Include="Assets\Scripts\ActorIDGenerator.cs" />
     <Compile Include="Assets\Scripts\ActorManager.cs" />
     <Compile Include="Assets\Scripts\Chess.cs" />
