--- a/SLG/Assembly-CSharp.csproj
+++ b/SLG/Assembly-CSharp.csproj
@@ -66,13 +66,18 @@
     <Compile Include="Assets\Scripts\ActorIDGenerator.cs" />
     <Compile Include="Assets\Scripts\ActorManager.cs" />
     <Compile Include="Assets\Scripts\AIManager.cs" />
-    <Compile Include="Assets\Scripts\BeginQuitBtn.cs" />
     <Compile Include="Assets\Scripts\Bezier.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\BeginQuitBtn.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\FalQuitBtn.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\LoadGmBtn.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\LoadLeaveBtn.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\MainQuitMenuBtn.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\StartGmBtn.cs" />
+    <Compile Include="Assets\Scripts\ButtonScripts\VicQuitBtn.cs" />
     <Compile Include="Assets\Scripts\Chess.cs" />
     <Compile Include="Assets\Scripts\ChoiceActor.cs" />
     <Compile Include="Assets\Scripts\EdgeVertices.cs" />
     <Compile Include="Assets\Scripts\EnemyActor.cs" />
-    <Compile Include="Assets\Scripts\FalQuitBtn.cs" />
     <Compile Include="Assets\Scripts\gameManager.cs" />
     <Compile Include="Assets\Scripts\gameSystem.cs" />
     <Compile Include="Assets\Scripts\HexCell.cs" />
@@ -91,17 +96,12 @@
     <Compile Include="Assets\Scripts\HexMesh.cs" />
     <Compile Include="Assets\Scripts\HexMetrics.cs" />
     <Compile Include="Assets\Scripts\ListPool.cs" />
-    <Compile Include="Assets\Scripts\LoadGmBtn.cs" />
-    <Compile Include="Assets\Scripts\LoadLeaveBtn.cs" />
-    <Compile Include="Assets\Scripts\MainQuitMenuBtn.cs" />
     <Compile Include="Assets\Scripts\mapManager.cs" />
     <Compile Include="Assets\Scripts\NewMapMenu.cs" />
     <Compile Include="Assets\Scripts\roundManager.cs" />
     <Compile Include="Assets\Scripts\SaveLoadItem.cs" />
     <Compile Include="Assets\Scripts\SaveLoadMenu.cs" />
     <Compile Include="Assets\Scripts\selectedMark.cs" />
-    <Compile Include="Assets\Scripts\StartGmBtn.cs" />
-    <Compile Include="Assets\Scripts\VicQuitBtn.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
